[tool.poetry]
name = "cfddns"
version = "0.1.0"
description = ""
authors = ["alvaro <garciajaenalvaro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
cloudflare = "^2.9.12"
clicker = "^0.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cfddns = "cfddns.app:main"
